refactor: change enviroment variables for aws secret manager